Add cursor-not-allowed class for disabled elements in main.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,10 @@ body {
 
 }
 
+.cursor-not-allowed {
+    cursor: not-allowed !important;
+}
+
 .vuecal__cell--disabled {
     display: none !important;
   }
