--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,320 +3,338 @@
 @tailwind utilities;
 
 body {
-
 }
 
 .cursor-not-allowed {
-    cursor: not-allowed !important;
+  cursor: not-allowed !important;
 }
 
 .vuecal__cell--disabled {
-    display: none !important;
-  }
-
-.dashboard-box {
-    width: 100%;
-    height: 95%;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: row;
+  display: none !important;
 }
 
+.dashboard-box {
+  width: 100%;
+  height: 95%;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: row;
+}
 
 .sidebar {
-    width: 300px;
-    background-color: #800000;
-    color: white;
-    padding: 20px;
-    border-radius: 10px 0 0 10px;
+  width: 290px;
+  background-color: #800000;
+  color: white;
+  padding: 20px;
+  border-radius: 10px 0 0 10px;
 }
 
 .menu-item,
 .submenu-item {
-    font-size: 18px;
-    margin: 10px 0;
-    cursor: pointer;
-    color: white;
-    padding: 8px 12px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease, border-left 0.3s ease;
-    display: flex;
-    align-items: center;
-    text-align: left;
+  font-size: 18px;
+  margin: 10px 0;
+  cursor: pointer;
+  color: white;
+  padding: 8px 12px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, border-left 0.3s ease;
+  display: flex;
+  align-items: center;
+  text-align: left;
 }
 
 .menu-item:hover,
 .submenu-item:hover {
-    background-color: #990000;
+  background-color: #990000;
 }
 
 .menu-item i,
 .submenu-item i {
-    margin-right: 10px;
-    font-size: 18px;
+  margin-right: 10px;
+  font-size: 18px;
 }
 
 .submenu-item:before {
-    content: ">";
-    margin-right: 10px;
-    color: #FFD700;
+  content: ">";
+  margin-right: 10px;
+  color: #ffd700;
 }
 
 .menu-item.active {
-    background-color: #550000;
-    border-left: 4px solid #FFF;
-    font-weight: bold;
+  background-color: #550000;
+  border-left: 4px solid #fff;
+  font-weight: bold;
 }
 
 .submenu-item.active {
-    background-color: #993333;
-    border-left: 4px solid #FFD700;
+  background-color: #993333;
+  border-left: 4px solid #ffd700;
 }
 
 .content-item {
-    list-style-type: disc;
-    color: #ddd;
-    margin-bottom: 5px;
-    padding-left: 25px;
+  list-style-type: disc;
+  color: #ddd;
+  margin-bottom: 5px;
+  padding-left: 25px;
 }
 
 .content-item.active a {
-    background-color: #555555;
-    color: white;
-    font-weight: bold;
-    padding-left: 8px;
-    border-radius: 5px;
+  background-color: #555555;
+  color: white;
+  font-weight: bold;
+  padding-left: 8px;
+  border-radius: 5px;
 }
 
 .submenu,
 .section-content {
-    margin-left: 20px;
+  margin-left: 20px;
 }
 
 .content-item a {
-    text-decoration: none;
-    color: #ddd;
-    transition: color 0.3s ease;
-    display: flex;
-    align-items: center;
+  text-decoration: none;
+  color: #ddd;
+  transition: color 0.3s ease;
+  display: flex;
+  align-items: center;
 }
 
 .content-item a i {
-    margin-right: 8px;
-    font-size: 16px;
+  margin-right: 8px;
+  font-size: 16px;
 }
 
 .content-item a:hover {
-    color: #fff;
+  color: #fff;
 }
 
 .main-content {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    padding: 20px;
-    overflow-y: hidden; /* Prevents scrolling on the main content */
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  padding: 20px;
+  overflow-y: hidden; /* Prevents scrolling on the main content */
 }
 
 .page-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-    background-color: #800000; /* Maroon background */
-    padding: 10px;
-    border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  background-color: #800000; /* Maroon background */
+  padding: 10px;
+  border-radius: 5px;
 }
 
 .page-header h2 {
-    color: #ffffff; /* White color for the text "LIST" */
-    font-size: 24px;
-    font-weight: bold;
-    margin-left: 20px; /* Adjust the left margin if needed */
+  color: #ffffff; /* White color for the text "LIST" */
+  font-size: 24px;
+  font-weight: bold;
+  margin-left: 20px; /* Adjust the left margin if needed */
 }
 
 .page-header .search-container {
-    display: flex;
-    justify-content: center;
-    flex-grow: 1; /* Allow the search container to grow and center within the header */
+  display: flex;
+  justify-content: center;
+  flex-grow: 1; /* Allow the search container to grow and center within the header */
 }
 
 .page-header #search-box {
-    width: 50%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+  width: 50%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
 .page-header .date {
-    font-size: 16px;
-    color: #ffffff;
-    margin-right: 20px; /* Adjust the right margin if needed */
+  font-size: 16px;
+  color: #ffffff;
+  margin-right: 20px; /* Adjust the right margin if needed */
 }
 
-.actions, .totals {
-    margin-bottom: 20px;
+.actions,
+.totals {
+  margin-bottom: 20px;
 }
 
 .actions {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* Existing styles for the buttons */
 .status-btn {
-    padding: 8px 15px;
-    border: none;
-    border-radius: 5px;
-    margin-right: 5px;
-    cursor: pointer;
-    font-size: 14px;
-    background-color: #f0f0f0; /* Light grey background */
-    color: black; /* Black text */
+  padding: 8px 15px;
+  border: none;
+  border-radius: 5px;
+  margin-right: 5px;
+  cursor: pointer;
+  font-size: 14px;
+  background-color: #f0f0f0; /* Light grey background */
+  color: black; /* Black text */
 }
 
 .status-btn.present.selected {
-    background-color: green;
-    color: white;
+  background-color: green;
+  color: white;
 }
 
 .status-btn.absent.selected {
-    background-color: red;
-    color: white;
+  background-color: red;
+  color: white;
 }
 
 .status-btn.excused.selected {
-    background-color: yellow;
-    color: black;
+  background-color: yellow;
+  color: black;
 }
 
 .status-btn.holiday.selected {
-    background-color: pink;
-    color: white;
+  background-color: pink;
+  color: white;
 }
 
 .status-btn.no-class.selected {
-    background-color: black;
-    color: white;
+  background-color: black;
+  color: white;
 }
 
 .submit-btn {
-    display: flex;
-    justify-content: center;
-    background-color: #800000;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    min-width: 175px;
+  display: flex;
+  justify-content: center;
+  background-color: #800000;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  min-width: 175px;
 }
 
 .table-container {
-    max-height: calc(100vh - 320px); /* Adjust to allow space for the fixed header and actions */
-    overflow-y: auto; /* Enable vertical scrolling within the table container */
+  max-height: calc(
+    100vh - 320px
+  ); /* Adjust to allow space for the fixed header and actions */
+  overflow-y: auto; /* Enable vertical scrolling within the table container */
 }
 
 #student-table {
-    width: 100%;
-    border-collapse: collapse;
+  width: 100%;
+  border-collapse: collapse;
 }
 
-#student-table th, #student-table td {
-    border: 1px solid #ccc;
-    padding: 10px;
-    text-align: center;
+#student-table th,
+#student-table td {
+  border: 1px solid #ccc;
+  padding: 10px;
+  text-align: center;
 }
 
 #student-table th {
-    background-color: #800000; /* Maroon color */
-    color: white;
+  background-color: #800000; /* Maroon color */
+  color: white;
 }
 
 #student-table td .status-btn {
-    margin: 0 5px;
+  margin: 0 5px;
 }
-
 
 .arrow-left,
 .arrow-right {
-    font-size: 24px;
-    color: white;
-    cursor: pointer;
-    position: absolute;
+  font-size: 24px;
+  color: white;
+  cursor: pointer;
+  position: absolute;
 }
 
 .arrow-left {
-    left: 10px;
+  left: 10px;
 }
 
 .arrow-right {
-    right: 10px;
+  right: 10px;
 }
 
 .calendar-container {
-    margin-top: 20px;
-    text-align: center;
+  margin-top: 20px;
+  text-align: center;
 }
 
 .calendar-container h3 {
-    margin-bottom: 20px;
-    font-size: 20px;
+  margin-bottom: 20px;
+  font-size: 20px;
 }
 
 .calendar-table {
-    width: 100%;
-    border-collapse: collapse;
+  width: 100%;
+  border-collapse: collapse;
 }
 
 .calendar-table th,
 .calendar-table td {
-    padding: 15px;
-    border: 1px solid #ddd;
-    text-align: center;
-    background-color: #f5f5f5;
+  padding: 15px;
+  border: 1px solid #ddd;
+  text-align: center;
+  background-color: #f5f5f5;
 }
 
 .calendar-table th {
-    background-color: #800000;
-    color: white;
+  background-color: #800000;
+  color: white;
 }
 
 .calendar-table td {
-    background-color: white;
+  background-color: white;
 }
 
-/* From Uiverse.io by Fernando-sv */ 
+/* From Uiverse.io by Fernando-sv */
 .loader {
-    border: 4px solid rgb(255, 255, 255);
-    border-left-color: transparent;
-    border-radius: 50%;
+  border: 4px solid rgb(255, 255, 255);
+  border-left-color: transparent;
+  border-radius: 50%;
+}
+
+.loader {
+  border: 4px solid rgb(255, 255, 255);
+  border-left-color: transparent;
+  width: 36px;
+  height: 36px;
+}
+
+.loader {
+  border: 4px solid rgb(255, 255, 255);
+  border-left-color: transparent;
+  width: 23px;
+  height: 23px;
+  animation: spin89345 1s linear infinite;
+}
+
+@keyframes spin89345 {
+  0% {
+    transform: rotate(0deg);
   }
-  
-  .loader {
-    border: 4px solid rgb(255, 255, 255);
-    border-left-color: transparent;
-    width: 36px;
-    height: 36px;
+
+  100% {
+    transform: rotate(360deg);
   }
-  
-  .loader {
-    border: 4px solid rgb(255, 255, 255);
-    border-left-color: transparent;
-    width: 23px;
-    height: 23px;
-    animation: spin89345 1s linear infinite;
-  }
-  
-  @keyframes spin89345 {
-    0% {
-      transform: rotate(0deg);
-    }
-  
-    100% {
-      transform: rotate(360deg);
-    }
-  }
+}
+
+.header-with-icon {
+  display: flex;
+  align-items: center;
+}
+
+.header-with-icon span {
+  margin-right: 8px;
+}
+
+.header-with-icon button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
